<resources>
    <string name="app_name">Kasida</string>
    <string name="text_linkPrivacy">
        CUSTOMER CONTACT DETAILS
        \n<ul><li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe1DDYw0kX_rnzOAGpJ5oxbbmzYMuZbufCessMzx1u97iYpaQ/viewform?usp=sf_link">CLICK HERE
        </a></li></ul>
    </string>
    <string name="text_linkProductDescreption">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1WXrgTg44hJsoe20XSrWG-W4fzt3SB4ta2bNWdkvdBbY/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_linkProductDescreption_VEGETABLE_BAG">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1h0HghKwA0n9NwJtCdmDgDiQGqvdrcYdDiR0c8OC9JeE/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_linkProductDescreption_STORAGE_BAG">
        \n<ul><li><a href="https://docs.google.com/presentation/d/10U6i-K_oKP4QEEH-PHxjnEgc4_Bjvc6yH2soO3sHNHs/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_linkProductDescreption_SHOPPING_BAG">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1a1hKnREtwqzvMNC6Vw1UDsCRZz8ACXbNyq-xflE7lI8/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_linkProductDescreption_FANCY_HAND_BAG">
        \n<ul><li><a href="https://docs.google.com/presentation/d/19LQsLSkQvxGcnHJ-h0kza0Wi8XFT-zIsC1r3PMJE6rs/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_linkProductDescreption_STORAGE_BROWN_BAG">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1N556Wh0scA5KAzyuiluOZGt0BJMSKzVH3KqQE6PjuNo/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_linkProductDescreption_BOTTLE_BAG">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1lal9Vny36BsncWGT4Oqr0zxWOS7SE1f6gNda7qixq3g/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_linkProductDescreption_SHAGUN_BAG">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1OnQQf7JuEM6kgptggcMDX9gdo5iTtQZkutd4CUdhFa8/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_linkProductDescreption_SLING_HAND_BAG">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1BhWHkOmlAmAKLF2bkYOKDy56ryEl4-s_D-eNIHfOtaY/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_linkProduct_feedback">
        \n<ul><li><a href="https://drive.google.com/file/d/1Vtfahfn_OIBEgpPltFEPDwb9zRdA5Esn/view?usp=sharing">CLICK HERE>>
        </a></li></ul>
    </string>
    <string name="text_radha_canvas">
        \n<ul><li><a href="https://docs.google.com/presentation/d/17kS5YfaGaFxDGkZkDuXgm9Qy2360EnizmFlhwR7v16Q/edit?usp=sharing">View Details
        </a></li></ul>
     </string>
    <string name="text_wine_canvas">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1Lj0vh04h825MjliljFFWwsaYR9j6qwJnn8ieB2XU3uE/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_canva_women">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1s6nN0tzo2YJczpmjV1Twf4Xo3eXmH-rrCr9-21Uwbkc/edit?usp=sharing">View Details
        </a></li></ul>
     </string>
    <string name="text_canva_tower">
        \n<ul><li><a href="  https://docs.google.com/presentation/d/1wN4cEO7vvMcb76YxrNK-t_Ikp7PupXpaH-mmY92nEzo/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <string name="text_canva_floral">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1BMwBM_5811BXdKgwLUm9LgctGz3LOQNKSo4VSRya2GQ/edit?usp=sharing">View Details
        </a></li></ul>
     </string>
    <string name="text_canva_artscenery">
        \n<ul><li><a href="https://docs.google.com/presentation/d/1h0m1tHibdHdxsLyqtLkZKrKnZizszMYTKDkqEaXUD7U/edit?usp=sharing">View Details
        </a></li></ul>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>


