<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_height="match_parent"
    tools:context=".Kasida_product_for_users">

  <androidx.cardview.widget.CardView
      android:layout_width="350dp"
      android:layout_height="200dp"
      android:padding="10dp"
      android:paddingTop="4dp"
      app:cardElevation="50dp"
      app:cardCornerRadius="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#00BCD4"
        >

      <ImageView
          android:layout_marginTop="10dp"
          android:layout_width="130dp"
          android:layout_height="120dp"
          android:src="@drawable/kasida_jute_storage_bag"
          android:layout_gravity="center_horizontal"
          android:background="#fff"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="JUTE SHOPPING BAG "
          android:textAlignment="center"
          android:textStyle="bold"
          android:fontFamily="sans-serif-black"
          android:textSize="15dp"
          android:textColor="@color/black"
          android:layout_marginTop="5dp"/>

      <TextView
          android:id="@+id/text_product4_description"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text_linkProductDescreption_VEGETABLE_BAG"
          android:textAlignment="center"
          android:layout_gravity="center_horizontal"
          android:textStyle="bold"
          android:fontFamily="sans-serif-black"
          android:textSize="10dp"
          android:textColor="@color/black"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"/>

      <Button
          android:id="@+id/btn_5"
          android:layout_width="wrap_content"
          android:layout_height="12dp"
          android:layout_gravity="center_horizontal"
          android:textColor="#fff"
          android:background="@color/black"
          android:textStyle="bold"
          android:fontFamily="sans-serif-black"
          android:textSize="10dp"
          android:text="BUY NOW " />


    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_marginTop="12dp"
      android:layout_width="350dp"
      android:layout_height="200dp"
      android:padding="10dp"
      app:cardElevation="50dp"
      app:cardCornerRadius="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#8BC34A">

      <ImageView
          android:layout_width="130dp"
          android:layout_height="120dp"
          android:layout_marginTop="10dp"
          android:background="#fff"
          android:layout_gravity="center_horizontal"
          android:src="@drawable/kasida_vegetable_bag_brown" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="FLOWER JUTE BAG"
          android:textAlignment="center"
          android:textStyle="bold"
          android:fontFamily="sans-serif-black"
          android:textSize="15dp"
          android:textColor="@color/black"
          android:layout_marginTop="5dp"/>

      <TextView
          android:id="@+id/text_product5_description"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text_linkProductDescreption_STORAGE_BROWN_BAG"
          android:textAlignment="center"
          android:layout_gravity="center_horizontal"
          android:textStyle="bold"
          android:fontFamily="sans-serif-black"
          android:textSize="10dp"
          android:textColor="@color/black"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"/>

      <Button
          android:id="@+id/btn_6"
          android:layout_width="wrap_content"
          android:layout_height="12dp"
          android:layout_gravity="center_horizontal"
          android:textColor="#fff"
          android:background="@color/black"
          android:textStyle="bold"
          android:fontFamily="sans-serif-black"
          android:textSize="10dp"
          android:text="BUY NOW " />


    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="350dp"
      android:layout_height="200dp"
      android:padding="10dp"
      app:cardElevation="50dp"
      app:cardCornerRadius="50dp"
      android:layout_marginTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#EA653B">

      <ImageView
          android:layout_width="130dp"
          android:layout_height="120dp"
          android:layout_marginTop="10dp"
          android:src="@drawable/kasida_fancy_hand_bag"
          android:layout_gravity="center_horizontal"
          android:background="#fff"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="FANCY HAND BAG"
          android:textAlignment="center"
          android:textStyle="bold"
          android:fontFamily="sans-serif-black"
          android:textSize="15dp"
          android:textColor="@color/black"
          android:layout_marginTop="5dp"/>

      <TextView
          android:id="@+id/text_product6_description"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text_linkProductDescreption_FANCY_HAND_BAG"
          android:textAlignment="center"
          android:layout_gravity="center_horizontal"
          android:textStyle="bold"
          android:fontFamily="sans-serif-black"
          android:textSize="10dp"
          android:textColor="@color/black"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"/>

      <Button
          android:id="@+id/btn_7"
          android:layout_width="wrap_content"
          android:layout_height="12dp"
          android:layout_gravity="center_horizontal"
          android:textColor="#fff"
          android:background="@color/black"
          android:textStyle="bold"
          android:fontFamily="sans-serif-black"
          android:textSize="10dp"
          android:text="BUY NOW " />


    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <Button
      android:id="@+id/btn_forward_1"
      android:layout_width="30dp"
      android:layout_height="20dp"
      android:layout_marginLeft="150dp"
      android:background="@android:drawable/ic_media_ff"
      android:backgroundTint="@color/black" />

</LinearLayout>