<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#ffe6ff"
    android:layout_height="match_parent"
    tools:context=".Kasida_product_for_users">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:padding="10dp"
        android:paddingTop="4dp"
        app:cardElevation="50dp"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:src="@drawable/kasida_bottle_bag_accurate"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="JUTE BOTTLE BAG "
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"/>

            <TextView
                android:id="@+id/text_product7_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_linkProductDescreption_BOTTLE_BAG"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"/>

            <Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:background="@color/black"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:text="BUY NOW " />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="8dp"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:padding="10dp"
        app:cardElevation="50dp"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/shagunbag_kasida" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SHAGUN BAG"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"/>

            <TextView
                android:id="@+id/text_product8_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_linkProductDescreption_SHAGUN_BAG"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"/>

            <Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:background="@color/black"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:text="BUY NOW " />




        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:padding="10dp"
        app:cardElevation="50dp"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:src="@drawable/kasida_sling_bag_accurate"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RAJASTHANI SLING BAG"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"/>

            <TextView
                android:id="@+id/text_product9_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_linkProductDescreption_SLING_HAND_BAG"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"/>

            <Button
                android:id="@+id/btn_10"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:background="@color/black"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:text="BUY NOW " />


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>