<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_height="match_parent"
    tools:context=".Kasida_product_for_users">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:padding="10dp"
        android:paddingTop="4dp"
        android:layout_marginTop="5dp"
        app:cardElevation="50dp"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:background="#FFEB3B"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:background="#fff"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/kasida_vegetable_bag"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="JUTE VEGETABLE BAG"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/text_product1_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_linkProductDescreption_VEGETABLE_BAG"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:background="@color/black"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:text="BUY NOW " />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:padding="10dp"
        app:cardElevation="50dp"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:background="#E91E63"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:background="#fff"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/kasida_jute_bag_storage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="JUTE STORAGE BAG"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/text_product2_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_linkProductDescreption_STORAGE_BAG"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:background="@color/black"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:text="BUY NOW " />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:padding="10dp"
        app:cardElevation="50dp"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="15dp">

        <LinearLayout

            android:background="#2196F3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:background="#fff"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/kasida_generaluse_bag_jute"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="WEDDING JUTE BAG"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/text_product3_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_linkProductDescreption"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:background="@color/black"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="10dp"
                android:text="BUY NOW " />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_forward"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginLeft="150dp"
        android:background="@android:drawable/ic_media_ff"
        android:backgroundTint="@color/black" />

</LinearLayout>